# DarkSynthesis

./: CMakeLists.txt  CartesianGraph.cpp  DarkSynthesis.pro  README.md  cartesiangraph.h  cartesiangraphdataobj.cpp  cartesiangraphdataobj.h  cartesiangraphsettingsdlg.cpp  cartesiangraphsettingsdlg.h  cartesiangraphsettingsdlg.ui  cartesianlabel.cpp  cartesianlabel.h  cmainwindow.cpp  cmainwindow.h  cmainwindow.h.autosave  cmainwindow.ui  comboboxdelegate.cpp  comboboxdelegate.h  darksynth.h  darksynthwidget.cpp  darksynthwidget.h  edge.cpp  edge.cpp.autosave  edge.h  graphwidget.cpp  graphwidget.cpp.autosave  graphwidget.h  main.cpp  modulenavigator.cpp  modulenavigator.h  modulenavigator.ui  node.cpp  node.h  objectnavigator.cpp  objectnavigator.ui  physbaseitem.cpp  physbaseitem.h  physcalculatetimer.cpp  physcalculatetimer.h  physcelldataobj.cpp  (+91 more)
MthEqEval/: eqevalcommon.h  eqevalparser.cpp  eqevalparser.h  eqevalrtstack.cpp  eqevalrtstack.h  mtheqval.cpp  mtheqval.h  tokens.h
inc/: cartesiangraph.h  cartesiangraphsettingsdlg.h  cartesianlabel.h  cmainwindow.h  graphwidget.h  modulenavigator.h  objectnavigator.h  physcalculatetimer.h  physchalkboard.h  physeqgridcell.h  physeqrowdlg.h  physeqsolverdelegate.h  physeqsolveritem.h  physeqsolvertable.h  physeqsolvertableheader.h  physequationsolverdock.h  physmodulenavigator.h  physmodulenavigatormodel.h  physobjectnavigator.h  physobjectpropdelegate.h  physobjectpropsnavigator.h  physobjectpropsnavigatordock.h  physoutputnavigator.h  physoutputnavigatordock.h  physparticle.h  physprintview.h  phystimeslicedataobj.h  (+2 more)
(+140 files in other folders)
